refactor top and side menu components to integrate routerLinkActive for active link styling

--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -6,16 +6,16 @@
   <div class="p-4 relative z-10">
     <ul class="list-none">
       <li class="py-2 border-b border-gray-200">
-        <a routerLink="/feed" class="text-gray-800 hover:text-gray-600">Feed</a>
+        <a routerLink="/feed" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">Feed</a>
       </li>
       <li class="py-2 border-b border-gray-200">
-        <a routerLink="/shelves" class="text-gray-800 hover:text-gray-600">My Shelves</a>
+        <a routerLink="/shelves" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">My Shelves</a>
       </li>
       <li class="py-2 border-b border-gray-200">
-        <a routerLink="/favorites" class="text-gray-800 hover:text-gray-600">Favorites</a>
+        <a routerLink="/favorites" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">Favorites</a>
       </li>
       <li class="py-2">
-        <a routerLink="/recommendations" class="text-gray-800 hover:text-gray-600">Recommendations</a>
+        <a routerLink="/recommendations" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">Recommendations</a>
       </li>
     </ul>
   </div>
