--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -4,16 +4,16 @@
   </div>
   <ul class="flex space-x-4 list-none">
     <li>
-      <a routerLink="/feed" class="text-gray-800 hover:text-gray-600">Feed</a>
+      <a routerLink="/feed" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">Feed</a>
     </li>
     <li>
-      <a routerLink="/shelves" class="text-gray-800 hover:text-gray-600">My Shelves</a>
+      <a routerLink="/shelves" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">My Shelves</a>
     </li>
     <li>
-      <a routerLink="/favorites" class="text-gray-800 hover:text-gray-600">Favorites</a>
+      <a routerLink="/favorites" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">Favorites</a>
     </li>
     <li>
-      <a routerLink="/recommendations" class="text-gray-800 hover:text-gray-600">Recommendations</a>
+      <a routerLink="/recommendations" routerLinkActive="font-bold text-gray-900" class="text-gray-800 hover:text-gray-600">Recommendations</a>
     </li>
   </ul>
 </div>
