refactor star-rating component to simplify rating logic and improve template structure

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="mb-2">
                       <span class="font-semibold">Rating:</span>
-                      <app-star-rating [rating]="4"></app-star-rating>
+                      <app-star-rating></app-star-rating>
                     </div>
                   </div>
                 </div>
