--- a/src/shared/star-rating/star-rating.component.html
+++ b/src/shared/star-rating/star-rating.component.html
@@ -1,8 +1,4 @@
-<div class="flex space-x-1">
-  <i *ngFor="let star of stars; let i = index"
-     class="fas"
-     [class.fa-star]="star"
-     [class.fa-star-o]="!star"
-     (click)="setRating(i)">
-  </i>
+<div class="flex">
+  <i *ngFor="let star of stars; let i = index"=
+     class="cursor-pointer text-2xl"></i>
 </div>
