enhance star-rating component with hover functionality and dynamic styling

--- a/src/shared/star-rating/star-rating.component.html
+++ b/src/shared/star-rating/star-rating.component.html
@@ -1,4 +1,7 @@
 <div class="flex">
-  <i *ngFor="let star of stars; let i = index"=
-     class="cursor-pointer text-2xl"></i>
+  <i *ngFor="let star of stars; let i = index"
+     (mouseenter)="setHover(i)"
+     (mouseleave)="clearHover()"
+     [ngClass]="{'text-gold': i <= hoverIndex, 'text-gray-400': i > hoverIndex}"
+     class="cursor-pointer text-2xl fas fa-star"></i>
 </div>
