--- a/src/shared/star-rating/star-rating.component.sass
+++ b/src/shared/star-rating/star-rating.component.sass
@@ -9,8 +9,6 @@
 .absolute.overflow-hidden
   transition: width 0.2s ease-in-out
 
-.fas.fa-star
-  transform-origin: center
+.relative:hover
+  transform: scale(1.1)
   transition: transform 0.2s ease-in-out
-  &:hover
-    transform: scale(1.1)
