--- a/src/app/user-shelves/user-shelves.component.html
+++ b/src/app/user-shelves/user-shelves.component.html
@@ -1,3 +1,7 @@
 <div class="container mx-auto px-4">
-  <app-shelf-list [shelves]="(shelves$ | async) ?? []" (shelfCreated)="onShelfCreated($event)"></app-shelf-list>
+  <app-shelf-list 
+    [shelves]="(shelves$ | async) ?? []" 
+    [isLoading]="isLoading"
+    (shelfCreated)="onShelfCreated($event)"
+  ></app-shelf-list>
 </div>
