--- a/src/shared/shelf-list/shelf-list.component.html
+++ b/src/shared/shelf-list/shelf-list.component.html
@@ -1,11 +1,18 @@
 <div class="container mx-auto px-4">
-  <div class="grid gap-4">
-    <app-add-collection-card class="mb-4" (collectionCreated)="onCollectionCreated($event)"></app-add-collection-card>
-    <app-shelf-card
-      *ngFor="let shelf of shelves"
-      [title]="shelf.shelfName"
-      [images]="shelf.images"
-      class="mb-4"
-    ></app-shelf-card>
+  <div *ngIf="isLoading; else content" class="grid gap-4">
+    <div *ngFor="let _ of [1, 2, 3]" class="animate-pulse">
+      <div class="h-48 w-full bg-gray-300 rounded-md"></div>
+    </div>
   </div>
+  <ng-template #content>
+    <div class="grid gap-4">
+      <app-add-collection-card class="mb-4" (collectionCreated)="onCollectionCreated($event)"></app-add-collection-card>
+      <app-shelf-card
+        *ngFor="let shelf of shelves"
+        [title]="shelf.shelfName"
+        [images]="shelf.images"
+        class="mb-4"
+      ></app-shelf-card>
+    </div>
+  </ng-template>
 </div>
