--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="mt-4 flex justify-between">
       <a href="#" class="text-blue-500 hover:underline">Forgot password?</a>
-      <a href="#" class="text-blue-500 hover:underline">Sign up</a>
+      <a routerLink="/signup" class="text-blue-500 hover:underline">Sign up</a>
     </div>
   </div>
 </div>
