--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,16 +14,20 @@
         <input type="email" id="email" [(ngModel)]="email" name="email" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
       <div class="mb-4">
+        <label for="password" class="block text-gray-700">Password</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-4">
+        <label for="confirmPassword" class="block text-gray-700">Confirm Password</label>
+        <input type="password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+      <div class="mb-4">
         <label for="nickname" class="block text-gray-700">Nickname</label>
         <input type="text" id="nickname" [(ngModel)]="nickname" name="nickname" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
-      <div class="mb-4">
+      <div class="mb-6">
         <label for="birthday" class="block text-gray-700">Birthday</label>
         <input type="date" id="birthday" [(ngModel)]="birthday" name="birthday" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-      </div>
-      <div class="mb-6">
-        <label for="password" class="block text-gray-700">Password</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
       </div>
       <div class="flex justify-center">
         <button *ngIf="!isLoading" type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600">Sign Up</button>
