implement signup functionality with error handling and validation feedback

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </form>
-    <div *ngIf="errorMessage" class="mt-4 text-red-500 text-center">
+    <div *ngIf="errorMessage" class="mt-4 text-red-500 text-center whitespace-pre-line">
       {{ errorMessage }}
     </div>
     <div class="mt-4 text-center">
