add edit profile link to avatar in side and top menu components

--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,7 +1,16 @@
 <div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden relative">
   <div *ngIf="backgroundImageUrl" [ngStyle]="{'background-image': 'url(' + backgroundImageUrl + ')'}" class="absolute inset-0 w-full h-32 bg-cover bg-center z-0"></div>
-  <div class="relative z-10 flex justify-center pt-2">
-    <app-avatar *ngIf="user$ | async as user" [name]="user.fullName"></app-avatar>
+  <div class="relative z-10 group">
+    <a routerLink="/profile/edit" class="absolute top-2 right-2 p-2 rounded-full bg-white shadow-md text-gray-600 hover:text-gray-900 opacity-0 group-hover:opacity-100 transition-opacity duration-200 z-20">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+      </svg>
+    </a>
+    <div class="flex justify-center items-center pt-2">
+      <div class="flex-shrink-0">
+        <app-avatar *ngIf="user$ | async as user" [name]="user.fullName"></app-avatar>
+      </div>
+    </div>
   </div>
   <div class="p-4 relative z-10">
     <ul class="list-none">
