--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,9 +1,7 @@
 <div class="flex items-center bg-white shadow-lg rounded-lg">
   <div class="mr-4 p-2 relative inset-0 bg-cover bg-center rounded-tl-lg rounded-bl-lg group" [ngStyle]="{'background-image': 'url(' + backgroundImageUrl + ')'}">
-    <a routerLink="/profile/edit" class="absolute top-1 right-1 p-1 rounded-full bg-white shadow-md text-gray-600 hover:text-gray-900 opacity-0 group-hover:opacity-100 transition-opacity duration-200 z-20">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-      </svg>
+    <a routerLink="/profile/edit" class="absolute top-1 right-1 w-6 h-6 flex items-center justify-center rounded-full bg-white shadow-md text-gray-600 hover:text-gray-900 opacity-0 group-hover:opacity-100 transition-opacity duration-200 z-20">
+      <i class="fas fa-pen fa-xs"></i>
     </a>
     <div class="flex items-center justify-center relative">
       <div class="flex-shrink-0 relative">
