--- a/src/app/root/root.component.html
+++ b/src/app/root/root.component.html
@@ -15,10 +15,10 @@
 <div class="flex flex-col lg:flex-row min-h-screen pt-20 mx-4 lg:mx-24">
   <div class="w-full lg:w-1/5 p-4 mt-2 mb-4 lg:mt-0 lg:mb-0 lg:fixed lg:h-full">
     <div class="block lg:hidden">
-      <app-top-menu backgroundImageUrl="background.jpg"></app-top-menu>
+      <app-top-menu [user]="user$ | async" backgroundImageUrl="background.jpg"></app-top-menu>
     </div>
     <div class="hidden lg:block">
-      <app-side-menu backgroundImageUrl="background.jpg"></app-side-menu>
+      <app-side-menu [user]="user$ | async" backgroundImageUrl="background.jpg"></app-side-menu>
     </div>
   </div>
   <div class="flex-1 p-4 mb-4 lg:mb-0 lg:ml-[22%]">
