--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-sm mx-auto bg-white shadow-lg rounded-lg overflow-hidden relative">
   <div *ngIf="backgroundImageUrl" [ngStyle]="{'background-image': 'url(' + backgroundImageUrl + ')'}" class="absolute inset-0 w-full h-32 bg-cover bg-center z-0"></div>
   <div class="relative z-10 group">
-    <a routerLink="/profile/edit" class="absolute top-2 right-2 w-8 h-8 flex items-center justify-center rounded-full bg-white shadow-md text-gray-600 hover:text-gray-900 opacity-0 group-hover:opacity-100 transition-opacity duration-200 z-20">
+    <a routerLink="/profile/edit" aria-label="Edit profile" class="absolute top-2 right-2 w-8 h-8 flex items-center justify-center rounded-full bg-white shadow-md text-gray-600 hover:text-gray-900 opacity-0 group-hover:opacity-100 transition-opacity duration-200 z-20">
       <i class="fas fa-pen fa-sm"></i>
     </a>
     <div class="flex justify-center items-center pt-2">
