--- a/src/app/user-profile-edit/user-profile-edit.component.html
+++ b/src/app/user-profile-edit/user-profile-edit.component.html
@@ -63,7 +63,12 @@
              class="w-full px-4 py-2 border rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
     </div>
 
-    <div class="flex justify-end">
+    <div class="flex justify-end space-x-4">
+      <button type="button" 
+              (click)="onCancel()"
+              class="px-6 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition-colors">
+        Cancel
+      </button>
       <button type="submit" 
               [disabled]="!profileForm.valid"
               class="px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:bg-gray-400 disabled:cursor-not-allowed transition-colors">
